samples/_failures_safe/1761272128_abf2c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e3b56dc.c: In function ‘print_dictionary’:
./samples/SAFE/__tmp_8e3b56dc.c:154:16: error: missing terminating " character
  154 |         printf("  Symbol: 0x%
      |                ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_8e3b56dc.c:154:9: error: expected expression at end of input
  154 |         printf("  Symbol: 0x%
      |         ^~~~~~
./samples/SAFE/__tmp_8e3b56dc.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8e3b56dc.c:154:9: error: expected declaration or statement at end of input
